# MultiTerminal

./: AUTHORS  COPYING  ChangeLog  MultiTerminal.desktop.src  README.md  configure.ac
icons/: iconLicenses.txt
src/: Makefile.am  cmdHistory.cpp  cmdHistory.h  connection.cpp  connection.h  connectionSettings.h  itoa.cpp  itoa.h  main.cpp  stdafx.h
src/gui/: aboutDlg.cpp  aboutDlg.h  backend.cpp  backend.h  backendEvent.h  mainframe.cpp  mainframe.h  multiBaseCommon.h  multiBaseInput.cpp  multiBaseInput.h  multiBaseOutput.cpp  multiBaseOutput.h  termChar.h  termFileDlgExtra.cpp  termFileDlgExtra.h  termInstance.cpp  termInstance.h
src/resource/: configFile.cpp  configFile.h  icons.cpp  icons.h  messages.cpp  messages.h
